# dusty

./: .gitignore  LICENSE
dev_ws/src/dusty/config/: drive_bot.rviz  my_controllers.yaml
dev_ws/src/dusty/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
dev_ws/src/dusty/launch/: camera.launch.py  launch_robot.launch.py  launch_sim.launch.py  rplidar.launch.py  rsp.launch.py
dev_ws/src/dusty/worlds/: halfstudio.world
dev_ws/src/my_package/: package.xml
dev_ws/src/my_package/launch/: talker.launch.py
dusty_ws_pi5/: .gitignore  pi test git.txt
dusty_ws_pi5/src/dusty_bringup/: CMakeLists.txt  package.xml
dusty_ws_pi5/src/dusty_bringup/launch/: navigation_launch.py
dusty_ws_pi5/src/dusty_bringup/params/: nav2_params.yaml
dusty_ws_pi5/src/dusty_bringup/src/: bringup_node.cpp
dusty_ws_pi5/src/dusty_slam/: setup.cfg
dusty_ws_pi5/src/dusty_slam/launch/: rplidar.launch.py  slam_toolbox_mapping.launch.py
dusty_ws_vm/src/dusty_slam/: package.xml  setup.py
install/: local_setup.sh  setup.sh
install/dusty/share/dusty/: local_setup.bash  (+9 more)
log/: latest_build
robot_ws/src/: rplidar.launch.py
robot_ws/src/dusty/: CMakeLists.txt  package.xml
src/dusty/: CMakeLists.txt
src/dusty/config/: drive_bot.rviz  empty.yaml  view_bot.rviz
src/dusty/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
src/dusty/launch/: launch_sim.launch.py  rsp.launch.py
src/dusty/worlds/: obstacles.world
src/dusty_bringup/: CMakeLists.txt  package.xml
src/my_package/: package.xml
(+41 files in other folders)
